Add recruit indicator

--- a/src/css/PokemonItem.css
+++ b/src/css/PokemonItem.css
@@ -35,8 +35,21 @@
   font-size: 15px;
 }
 
+.pkmn-info-ball {
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
+  width: 20px;
+}
+
+.pkmn-info-ball.recruit {
+  width: 20px;
+  -webkit-filter: none; /* Safari 6.0 - 9.0 */
+  filter: none;
+}
+
 .pkmn-info-name {
   font-size: 30px;
+  margin-left: 5px;
 }
 
 .pkmn-info-types {
@@ -63,8 +76,4 @@
   margin-right: -10px;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
-}
-
-.pkmn-recruit img {
-  width: 25px;
 }
