--- a/src/css/PokemonList.css
+++ b/src/css/PokemonList.css
@@ -2,22 +2,17 @@
   display: flex;
   justify-content: center;
   font-family: sans-serif;
-  font-weight: 700;
-  font-size: 1.5rem;
 }
 
 .list {
-  height: 20px;
   width: 50vw;
   list-style: none;
-  border-style: none;
 }
 
 .list li {
-
+  margin-bottom: 10px;
 }
 
 .list li:last-child {
-  border-style: none;
   margin-bottom: 0px;
 }
