--- a/src/css/PokemonItem.css
+++ b/src/css/PokemonItem.css
@@ -69,8 +69,14 @@
   width: 75px;
   min-height: 170px;
   margin-right: -10px;
+  border: none;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
   font-size: 1.2rem;
   font-weight: 600;
+  cursor: pointer;
+}
+
+.pkmn-recruit:focus {
+  outline: none;
 }
