--- a/src/css/PokemonItem.css
+++ b/src/css/PokemonItem.css
@@ -5,6 +5,7 @@
   background-color: lightblue;
   border-radius: 10px;
   padding: 10px;
+  /* margin: 5px 0px; */
   height: 150px;
   text-transform: capitalize;
 }
