--- a/src/css/SearchBar.css
+++ b/src/css/SearchBar.css
@@ -2,20 +2,41 @@
 
 .search-bar {
   background-color: var(--pokeball-black-faint2);
+  position: sticky;
+  top: 50px;
+  z-index: 1;
   padding: 5px;
+  /* flex-direction: column; */
+  display: flex;
+  justify-content: center;
 }
 
 .search-bar form {
   display: flex;
-  justify-content: center;
-  width: 100%;
+  justify-content: space-between;
+  justify-items: baseline;
+  background-color: var(--pokeball-white);
+  width: 60%;
+  border-radius: 25px;
+  padding: 2px;
+  border: 1px solid var(--pokeball-black-faint);
+}
+
+.search-bar span {
+  padding: 4px;
+  margin: 0px 3px;
 }
 
 .search-bar input {
   height: 2rem;
   font-size: 1.2rem;
-  width: 50%;
   padding: 2px 5px;
+  background-color: var(--pokeball-white);
+  border: none;
   border-radius: 25px;
-  border: 1px solid var(--pokeball-black-faint);
+  width: 95%;
+}
+
+.search-bar input:focus {
+  outline: none;
 }
