--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,7 +1,10 @@
-body {
-  font-size: 20px;
+* {
   margin: 0;
   padding: 0;
+}
+
+body {
+  font-size: 20px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
