--- a/src/css/TeamViewItem.css
+++ b/src/css/TeamViewItem.css
@@ -7,7 +7,11 @@
     height: 130px;
     width: 130px;
     margin: 6px;
+    font-size: 12px;
+    color: var(--pokeball-black-faint2);
+    text-align: center;
 }
+
 
 .delete-button {
     border-radius: 10px;
