--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,5 @@
+@import './variables.css';
+
 * {
   margin: 0;
   padding: 0;
@@ -5,6 +7,7 @@
 
 body {
   font-size: 20px;
+  background-color: var(--pokeball-white);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
